# ggpo-py

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.py  pyproject.toml  setup.py  test_game.py
examples/: test_game.py
ggpo_py/: __init__.py  ggpo_py.pyi  ggpoplayer.py
src/: main.cpp  py_ggposession.cpp  py_ggposession.h
